--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,29 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.450</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>1.409</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
-  <groupId>jenkinsci</groupId>
-  <artifactId>browser-axis</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>browser-axis-plugin</artifactId>
   <packaging>hpi</packaging>
+  <name>Browser axis</name>
+  <version>1.0-SNAPSHOT</version>
+  <url>https://wiki.jenkins-ci.org/display/JENKINS/Browser+axis+plugin</url>
+  
+  <developers>
+    <developer>
+      <id>lvotypko</id>
+      <name>Lucie Votypkova</name>
+      <email>lvotypko@redhat.com</email>
+    </developer>
+  </developers>
+  
+  <distributionManagement>
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <url>http://maven.jenkins-ci.org:8081/content/repositories/releases/</url>
+    </repository>
+  </distributionManagement>
 
   <!-- get every artifact through maven.glassfish.org, which proxies all the artifacts that we need -->
   <repositories>
@@ -25,4 +41,10 @@
       <url>http://maven.glassfish.org/content/groups/public/</url>
     </pluginRepository>
   </pluginRepositories>
+  
+  <scm>
+    <connection>scm:git:ssh://github.com/jenkinsci/browser-axis-plugin.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/browser-axis-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/browser-axis-plugin</url>
+  </scm>
 </project>
