--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>browser-axis-plugin</artifactId>
   <packaging>hpi</packaging>
   <name>Browser axis</name>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Browser+axis+plugin</url>
   
   <developers>
